--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<!-- inject:html -->
-	<li><a href="../html/pages/product/product-detail.html">/../dist/html/pages/product/product-detail.html</a></li>
+	<li><a href="./product-detail/html/pages/product/product-detail.html">/../dist/html/pages/product/product-detail.html</a></li>
 	<!-- endinject -->
 
 </body>
