native share test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
 	<!-- inject:html -->
-	<li><a href="./html/pages/product/product-detail.html">/../dist/html/pages/product/product-detail.html</a></li>
+	<li><a href="/../html/pages/account/account.html">/../dist/html/pages/account/account.html</a></li>
+	<li><a href="/../html/pages/checkout/basket.html">/../dist/html/pages/checkout/basket.html</a></li>
+	<li><a href="/../html/pages/checkout/delivery.html">/../dist/html/pages/checkout/delivery.html</a></li>
+	<li><a href="/../html/pages/product/product-detail.html">/../dist/html/pages/product/product-detail.html</a></li>
 	<!-- endinject -->
 
 </body>
