--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -22,7 +22,7 @@
 			<!-- inject:../src/html/partials/header/_header.html -->
 			<header class="o-header">
 	<a class="a-boynerLogo" href="/">
-		<img src="/img/boyner.svg" alt="">
+		<img src="/product-detail/img/boyner.svg" alt="">
 	</a>
 </header>
 			<!-- endinject -->
