--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -105,7 +105,7 @@
 
 			const shareBtn = document.querySelector('[data-share-btn]');
 				const ogBtnContent = shareBtn.textContent;
-				const title = document.querySelector('h1').textContent;
+				const title = this.product.name;
 				const url = document.querySelector('link[rel=canonical]') &&
 					document.querySelector('link[rel=canonical]').href ||
 					window.location.href;
