--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="share-container">
-				<button id="btn-share" data-share-btn>Share</button>
+				<button class="btn-share" v-on:click="shareProduct" data-share-btn>Share</button>
 			</div>
 
 			<recommended-slider-loading-skeleton data-product-recommended-slider v-if="completeTheCombination.products.length === 0"></recommended-slider-loading-skeleton>
@@ -102,36 +102,6 @@
 			// 		});
 			// 	});
 			// });
-
-			const shareBtn = document.querySelector('[data-share-btn]');
-				const ogBtnContent = shareBtn.textContent;
-				const title = this.product.name;
-				const url = document.querySelector('link[rel=canonical]') &&
-					document.querySelector('link[rel=canonical]').href ||
-					window.location.href;
-
-				shareBtn.addEventListener('click', () => {
-					if (navigator.share) {
-						navigator.share({
-							title,
-							url
-						}).then(() => {
-							showMessage(shareBtn, 'Thanks! 😄');
-						})
-							.catch(err => {
-								showMessage(shareBtn, `Couldn't share 🙁`);
-							});
-					} else {
-						showMessage(shareBtn, 'Not supported 🙅‍');
-					}
-				});
-
-				function showMessage(element, msg) {
-					element.textContent = msg;
-					setTimeout(() => {
-						element.textContent = ogBtnContent;
-					}, 2000);
-				}
 
 	</script>
 	</body>
