--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -48,7 +48,7 @@
 					<span class="o-product__freeCargoIcon">
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
 							<g>
-								<path class="st0 o-product__freeCargoIconPath" d="M20,15h-0.8c-0.5-0.6-1.3-1-2.2-1c-0.4,0-1,0.1-1,0.2V13h4V15z M17,18c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1   S17.6,18,17,18L17,18z M10,11h4V6h-4V11z M14,15H9.2c-0.5-0.6-1.3-1-2.2-1s-1.7,0.4-2.2,1H4v-2h10V15z M7,18c-0.6,0-1-0.4-1-1   s0.4-1,1-1s1,0.4,1,1S7.6,18,7,18L7,18z M4,11h4V6H4V11z M16,11V4H2v13h2c0,1.7,1.3,3,3,3s3-1.3,3-3h4c0,1.7,1.3,3,3,3s3-1.3,3-3h2   v-6H16z"/>
+								<path class="st0 o-product__freeCargoIconPath" d="M20,15h-0.8c-0.5-0.6-1.3-1-2.2-1c-0.4,0-1,0.1-1,0.2V13h4V15z M17,18c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1   S17.6,18,17,18L17,18z M10,11h4V6h-4V11z M14,15H9.2c-0.5-0.6-1.3-1-2.2-1s-1.7,0.4-2.2,1H4v-2h10V15z M7,18c-0.6,0-1-0.4-1-1   s0.4-1,1-1s1,0.4,1,1S7.6,18,7,18L7,18z M4,11h4V6H4V11z M16,11V4H2v13h2c0,1.7,1.3,3,3,3s3-1.3,3-3h4c0,1.7,1.3,3,3,3s3-1.3,3-3h2   v-6H16z" fill="#03a87c" fill-rule="evenodd"/>
 							</g>
 						</svg>
 					</span>
@@ -56,9 +56,13 @@
 				</div>
 			</div>
 
-			<div class="share-container">
-				<button class="btn-share" v-on:click="shareProduct" data-share-btn>Share</button>
-			</div>
+			<button class="m-productShare__btn" data-share-btn type="button" v-on:click="shareProduct">
+				Paylaş
+				<svg width="12" height="16" xmlns="http://www.w3.org/2000/svg">
+					<path
+						d="M9.705 4.003l-1.011 1.09-1.944-1.82v7.024h-1.5V3.273l-1.908 1.82-1.022-1.09L6.031.5l3.674 3.503zM12 15.5H0V7.25h1.5V14h9V7.25H12v8.25z"
+						fill="#1D1D1D" fill-rule="evenodd" /></svg>
+			</button>
 
 			<recommended-slider-loading-skeleton data-product-recommended-slider v-if="completeTheCombination.products.length === 0"></recommended-slider-loading-skeleton>
 			<recommended-product-slider
@@ -88,21 +92,5 @@
 	<!-- page:../../../js/pages/product/product-detail.js -->
 	<script src="../../../js/pages/product/product-detail.js"></script>
 	<!-- endinject -->
-	<script>
-			// window.addEventListener('load', function () {
-			// 	if (!navigator.share) {
-			// 		document.querySelector('.share-container').innerHTML = 'Web Share API not supported in this browser';
-			// 		return;
-			// 	}
-			// 	document.getElementById('btn-share').addEventListener('click', function () {
-			// 		navigator.share({
-			// 			title: 'Check out this web share API demo',
-			// 			text: 'Its really cool',
-			// 			url: 'https://mobiforge.github.io/web-share-api.html',
-			// 		});
-			// 	});
-			// });
-
-	</script>
 	</body>
 	</html>
