--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -18,82 +18,81 @@
 		<link rel="stylesheet" href="../../../css/product-detail.css">
 		<!-- endinject -->
 	</head>
-	<body>
+		<body>
 			<!-- inject:../src/html/partials/header/_header.html -->
 			<header class="o-header">
-	<a class="a-boynerLogo" href="/">
-		<img src="/product-detail/img/boyner.svg" alt="">
-	</a>
-</header>
+				<a class="a-boynerLogo" href="/">
+					<img src="/product-detail/img/boyner.svg" alt="">
+				</a>
+			</header>
 			<!-- endinject -->
-		<div class="o-product" data-product v-cloak>
-			<!-- Swiper -->
-			<product-detail-slider
-				v-bind:slider="getProductSliderImages"
-			></product-detail-slider>
-
-			<span class="a-discountBadge" v-if="product.discountRate > 0">%{{product.discountRate}}</span>
-			<div class="o-product__detail">
-				<h2 class="o-product__brand"><a class="o-product__brandLink" v-bind:href="product.attributes.brandUrl">{{product.attributes.brand}}</a></h2>
-				<h1 class="o-product__name">{{product.name}}</h1>
-
-				<div class="o-product__sizeChart">
-					<h3 class="o-product__subtitle">Beden</h3>
-					<button class="o-product__sizeChartButton btn -link" v-on:click="showSizeChartModal()">Beden Tablosu</button>
+			<div class="o-product" data-product v-cloak>
+				<!-- Swiper -->
+				<product-detail-slider v-bind:slider="getProductSliderImages"></product-detail-slider>
+		
+				<span class="a-discountBadge" v-if="product.discountRate > 0">%{{product.discountRate}}</span>
+				<div class="o-product__detail">
+					<h2 class="o-product__brand"><a class="o-product__brandLink"
+							v-bind:href="product.attributes.brandUrl">{{product.attributes.brand}}</a></h2>
+					<h1 class="o-product__name">{{product.name}}</h1>
+		
+					<div class="o-product__isFreeCargo" v-if="product.attributes.isFreeCargo">
+						<img class="o-product__freeCargoIcon" src="/product-detail/img/free-delivery.svg" alt="Free Cargo Icon">
+						Kargo Bedava
+					</div>
+		
+					<div class="o-product__sizeChart">
+						<h3 class="o-product__subtitle">Beden</h3>
+						<button class="o-product__sizeChartButton btn -link" v-on:click="showSizeChartModal()">Beden Tablosu</button>
+					</div>
+		
+					<size-chart-modal v-if="isShowSizeChartModal" v-bind:product="product" v-on:close="closeSizeChartModal()">
+					</size-chart-modal>
+		
+					<div class="o-product__clickAndCollect">
+						<img class="o-product__clickAndCollectIcon" src="/product-detail/img/click-and-collect.svg" alt="Click And Collect Icon">
+						<p class="o-product__clickAndCollectStatus">Mağazadan Teslim Alınabilir</p>
+						<img class="o-product__clickAndCollectQuestionMark" src="/product-detail/img/question-mark.svg" alt="Question Mark Icon"
+							v-on:click="showClickAndCollectModal()">
+					</div>
+		
+					<click-and-collect v-if="isShowClickAndCollectModal" v-on:close="closeClickAndCollectModal()"></click-and-collect>
 				</div>
-
-				<size-chart-modal v-if="isShowSizeChartModal" v-on:close="closeSizeChartModal()" v-bind:product="product"></size-chart-modal>
-
-				<div class="o-product__isFreeCargo" v-if="product.attributes.isFreeCargo">
-					<span class="o-product__freeCargoIcon">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
-							<g>
-								<path class="st0 o-product__freeCargoIconPath" d="M20,15h-0.8c-0.5-0.6-1.3-1-2.2-1c-0.4,0-1,0.1-1,0.2V13h4V15z M17,18c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1   S17.6,18,17,18L17,18z M10,11h4V6h-4V11z M14,15H9.2c-0.5-0.6-1.3-1-2.2-1s-1.7,0.4-2.2,1H4v-2h10V15z M7,18c-0.6,0-1-0.4-1-1   s0.4-1,1-1s1,0.4,1,1S7.6,18,7,18L7,18z M4,11h4V6H4V11z M16,11V4H2v13h2c0,1.7,1.3,3,3,3s3-1.3,3-3h4c0,1.7,1.3,3,3,3s3-1.3,3-3h2   v-6H16z" fill="#03a87c" fill-rule="evenodd"/>
-							</g>
-						</svg>
-					</span>
-					Kargo Bedava
-				</div>
+		
+				<button class="m-productShare__btn" data-share-btn type="button" v-on:click="shareProduct">
+					Paylaş
+					<svg width="12" height="16" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M9.705 4.003l-1.011 1.09-1.944-1.82v7.024h-1.5V3.273l-1.908 1.82-1.022-1.09L6.031.5l3.674 3.503zM12 15.5H0V7.25h1.5V14h9V7.25H12v8.25z"
+							fill="#1D1D1D" fill-rule="evenodd" /></svg>
+				</button>
+				<product-share v-if="isShowProductShareModal" v-bind:share-url="shareUrl" v-bind:product-name="product.name"
+					v-on:close="closeProductShareModal()"></product-share>
+		
+				<recommended-slider-loading-skeleton data-product-recommended-slider
+					v-if="completeTheCombination.products.length === 0"></recommended-slider-loading-skeleton>
+				<recommended-product-slider v-bind:key="completeTheCombination.sliderName" v-bind:slider="completeTheCombination">
+				</recommended-product-slider>
+		
+				<recommended-slider-loading-skeleton data-product-recommended-slider
+					v-if="previouslyReviewed.products.length === 0"></recommended-slider-loading-skeleton>
+				<recommended-product-slider v-bind:key="previouslyReviewed.sliderName" v-bind:slider="previouslyReviewed">
+				</recommended-product-slider>
+		
+				<recommended-slider-loading-skeleton data-product-recommended-slider v-if="suggested.products.length === 0">
+				</recommended-slider-loading-skeleton>
+				<recommended-product-slider v-bind:key="suggested.sliderName" v-bind:slider="suggested">
+				</recommended-product-slider>
 			</div>
-
-			<button class="m-productShare__btn" data-share-btn type="button" v-on:click="shareProduct">
-				Paylaş
-				<svg width="12" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M9.705 4.003l-1.011 1.09-1.944-1.82v7.024h-1.5V3.273l-1.908 1.82-1.022-1.09L6.031.5l3.674 3.503zM12 15.5H0V7.25h1.5V14h9V7.25H12v8.25z" fill="#1D1D1D" fill-rule="evenodd"/></svg>
-			</button>
-			<product-share
-				v-if="isShowProductShareModal"
-				v-bind:share-url="shareUrl"
-				v-bind:product-name="product.name"
-				v-on:close="closeProductShareModal()"
-			></product-share>
-
-			<recommended-slider-loading-skeleton data-product-recommended-slider v-if="completeTheCombination.products.length === 0"></recommended-slider-loading-skeleton>
-			<recommended-product-slider
-				v-bind:key="completeTheCombination.sliderName"
-				v-bind:slider="completeTheCombination"
-			></recommended-product-slider>
-
-			<recommended-slider-loading-skeleton data-product-recommended-slider v-if="previouslyReviewed.products.length === 0"></recommended-slider-loading-skeleton>
-			<recommended-product-slider
-				v-bind:key="previouslyReviewed.sliderName"
-				v-bind:slider="previouslyReviewed"
-			></recommended-product-slider>
-
-			<recommended-slider-loading-skeleton data-product-recommended-slider v-if="suggested.products.length === 0"></recommended-slider-loading-skeleton>
-			<recommended-product-slider
-				v-bind:key="suggested.sliderName"
-				v-bind:slider="suggested"
-			></recommended-product-slider>
-		</div>
-
-	<!-- page:../../../js/polyfills/product-detail-polyfill.js -->
-	<script src="../../../js/polyfills/product-detail-polyfill.js"></script>
-	<!-- endinject -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.8/vue.js"></script>
-
-	<!-- page:../../../js/pages/product/product-detail.js -->
-	<script src="../../../js/pages/product/product-detail.js"></script>
-	<!-- endinject -->
-	</body>
+		
+			<!-- page:../../../js/polyfills/product-detail-polyfill.js -->
+			<script src="../../../js/polyfills/product-detail-polyfill.js"></script>
+			<!-- endinject -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.8/vue.js"></script>
+			
+			<!-- page:../../../js/pages/product/product-detail.js -->
+			<script src="../../../js/pages/product/product-detail.js"></script>
+			<!-- endinject -->
+		</body>
 	</html>
