--- a/html/pages/product/product-detail.html
+++ b/html/pages/product/product-detail.html
@@ -4,7 +4,21 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Boyner.com.tr | Ödeme</title>
+		<meta http-equiv="cache-control" content="no-cache" />
+    <meta name="format-detection" content="telephone=no">
+    <meta name="Pragma" content="no-cache" />
+    <meta name="keywords" content="Nike Nike Sweatshirt" />
+    <meta name="description" content="Nike Sweatshirt 836799 vade farksız taksit seçeneği ve uygun fiyatlara Boyner.com.tr’de" />
+    <title>Nike Sweatshirt 836799 Boyner.com.tr’de!</title>
+
+		<meta property="og:image" content="https://statics.boyner.com.tr/mnresize/505/704/productimages/5002364928_700_05.jpg" />
+		<meta property="og:url" content="https://www.boyner.com.tr/nike-sweatshirt-836799-500102" />
+		<meta property="og:title" content="Nike Kadın Antrenman Sweatshirt" />
+		<meta property="og:description" content="Dri-FIT teknolojisi: Ter tutmayan özelliği ile spor boyunca kuru kalmaya yardımcı olur. Bol kesim: Rahatça hareket etmeyi sağlar. Kumaş bilgisi: %54 polyester ve %46 spandex karışımıdır. Yıkama talimatı: Makinede yıkamaya uygundur." />
+		<meta itemprop="title" content="Nike Kadın Antrenman Sweatshirt" />
+		<meta itemprop="name" content="Nike Kadın Antrenman Sweatshirt" />
+		<meta itemprop="description" content="Dri-FIT teknolojisi: Ter tutmayan özelliği ile spor boyunca kuru kalmaya yardımcı olur. Bol kesim: Rahatça hareket etmeyi sağlar. Kumaş bilgisi: %54 polyester ve %46 spandex karışımıdır. Yıkama talimatı: Makinede yıkamaya uygundur." />
+		<meta itemprop="image" content="https://statics.boyner.com.tr/mnresize/97/135/productimages/5002364928_700_05.jpg" />
 
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/css/swiper.min.css" rel="stylesheet">
 		<!-- vendor:css -->
